@@ -6,6 +6,7 @@
 * Added exception handling to main functions.
 * Updated readme file.
 * Updated git repo link in PKGBUILDs and fixed version.
+* Replaced QList by std::vector and std::list.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
